# ThietBiDoKhoangCach

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
main/lib/: WebSocket.h  gpio_handler.h  http_server.h  nvs_handle.h  time_handle.h  vl53l0x_handler.h  wifi_handler.h
main/pololu_vl53l0x/: vl53l0x.h
main/src/: WebSocket.c  gpio_handler.c  http_server.c  http_server.cpp  nvs_handle.c  time_handle.c  vl53l0x_handler.cpp  wifi_handler.c
main/webserver/: index.html  script.js  style.css
